# ChangeLog for app-emacs/wanderlust
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/wanderlust/ChangeLog,v 1.79 2009/09/27 19:47:32 ulm Exp $

  27 Sep 2009; Ulrich Mueller <ulm@gentoo.org> -wanderlust-2.14.0-r3.ebuild:
  Remove old.

  27 Sep 2009; nixnut <nixnut@gentoo.org> wanderlust-2.14.0-r5.ebuild:
  ppc stable #285071

  22 Sep 2009; Raúl Porcel <armin76@gentoo.org>
  wanderlust-2.14.0-r5.ebuild:
  alpha/sparc stable wrt #285071

  20 Sep 2009; Markus Meier <maekke@gentoo.org> wanderlust-2.14.0-r5.ebuild:
  amd64/x86 stable, bug #285071

*wanderlust-2.14.0-r5 (19 Sep 2009)

  19 Sep 2009; Ulrich Mueller <ulm@gentoo.org> -wanderlust-2.14.0-r4.ebuild,
  +wanderlust-2.14.0-r5.ebuild:
  Fix installation paths, change back from "wanderlust" to "wl", bug 285588.
  Drop x86 keyword to unstable.

  16 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  wanderlust-2.14.0-r4.ebuild:
  stable x86, bug 285071

*wanderlust-2.14.0-r4 (10 Aug 2009)

  10 Aug 2009; Ulrich Mueller <ulm@gentoo.org>
  +files/50wanderlust-gentoo.el, +wanderlust-2.14.0-r4.ebuild,
  +files/wanderlust-2.14.0-smtp-end-of-line.patch,
  +files/wanderlust-2.14.0-texinfo-garbage.patch:
  Don't bind smtp-end-of-line, for compatibility with latest version of flim;
  patch from upstream, fixes bug 280248. Install non-lisp files under SITEETC.
  Change install locations and site-init file name from "wl" to "wanderlust".
  Install Japanese documentation and samples only with LINGUAS=ja. Fix garbage
  characters in texinfo file that caused a failure when saving the info file.

  05 May 2009; Ulrich Mueller <ulm@gentoo.org> wanderlust-2.14.0-r3.ebuild,
  wanderlust-2.15.5_pre20070921.ebuild,
  wanderlust-2.15.5_pre20071215.ebuild:
  Fix dependencies, blocker belongs in RDEPEND only.

  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
  wanderlust-2.14.0-r3.ebuild, wanderlust-2.15.5_pre20070921.ebuild,