@@ -1,14 +1,10 @@
 AUX 50wanderlust-gentoo.el 244 RMD160 dbe0e9107a509f130fc0fdd588798713756a4334 SHA1 a91585b2fcf2074d25ccedf49681d1a970eefcef SHA256 de1718862e2b99d1c6e65daac84834a933bbafd6f64cbed129df0528ac76f811
-AUX 70wl-gentoo.el 289 RMD160 aaf12aa3cdc18af8ac45f29c65799a67e87a7823 SHA1 ce8b0deb0942bb7be9b3fd7d1acc23fee2c977b6 SHA256 631ceb6a81697b6fe2acae67314fd302e38184bdfb60e630e58db9217e50a7fb
 AUX wanderlust-2.14.0-smtp-end-of-line.patch 628 RMD160 817c5e00f69e85eb6d804e6f8093a5a05293243d SHA1 1ab494222bfd7ecb0c22fddbc13e2dda18c94650 SHA256 7d6315b46f4be4e8cf8c851e4d567319e1f05dc2cfc12f166dd4aa987dc36e52
 AUX wanderlust-2.14.0-texinfo-garbage.patch 473 RMD160 c8a71c235ef28ebe7f5b870ee86a396f4999f564 SHA1 8f92e725c51a5c1380b68a10635b70299529a8bc SHA256 916565859afd2b7588ddeddf4897c33c35d1cb4a09700c5633626f127290e036
-DIST wanderlust-2.15.5_pre20070921.tar.bz2 837135 RMD160 8319f90a1e048d774ff37ea90b715b9d82c38aae SHA1 19cb35d8cad5db5bbcaee0cc044292734ce6a735 SHA256 cdab85b90fc4436c746297d13bd6cadc7a8f277b08129d2e81975e90039aef3b
-DIST wanderlust-2.15.5_pre20071215.tar.bz2 869234 RMD160 49390b600a92ef04257d362591d27c8b917b63c8 SHA1 03f5700c333b6fb88dfc0a18f7fa81ccbf13903f SHA256 566f9a0ee683ab719edbd1589fc97e0eaa9a472e4d2fa44dfec15e1094f742fe
+DIST wanderlust-2.15.7_pre20090820.tar.bz2 876832 RMD160 be7c429ca0f9e7372322e44ff5a50366736bacbc SHA1 6fc20e9b930cb518ac37f6f7ec233975df29582f SHA256 40daee3a2822b312482d7962e15c0d0a8439ec5bc255b1bbbc2161d0766104fb
 DIST wl-2.14.0-20050405.diff 16123 RMD160 d88173f176ee8608f81369b6d4ac219cffe960f1 SHA1 5267739fcad7693ce24cdeda3461e19704b8a4d9 SHA256 09b1f4365756fd990f7c2d47e506ab5fa3186a423101380b2d26b617af2a213d
 DIST wl-2.14.0.tar.gz 1101505 RMD160 1a5aa025fc05cbcf2a7d390b1804cc1b22f5df2b SHA1 75b93013444cb27ca540462afbaefdce0e157b3f SHA256 883b61e7e9560aff35efcf7d0d48b0ddd7cde598895ffd111ff214072253eb1f
-EBUILD wanderlust-2.14.0-r3.ebuild 1555 RMD160 e577a95d5a127e042780fa4c5df62e5f77b842c3 SHA1 5f136d8739d60ee73078b26d4fa184862fea86c1 SHA256 2705e8be21d0a4d25fda969c8655d4018f925cc687f398822a73468f4de9c36a
 EBUILD wanderlust-2.14.0-r5.ebuild 1752 RMD160 5086b00d36e9f6c0e77b4651253ee9d6519602b8 SHA1 0656704547ae447f3f7eb4e271fcc78b2e25adaf SHA256 0bc39d891d1c01046b5ecea6579c2fb99ac253bb6b91f1123e8e82b789ae8693
-EBUILD wanderlust-2.15.5_pre20070921.ebuild 1299 RMD160 c206806924a19f525d4f0d3c5b896ff60f17bf0c SHA1 acb34c4c5f8b583a2ea92413674d0132f45b889c SHA256 25031be2998e722936283b33115eef7e1dab45038819ca907c7ea8c5501e1637
-EBUILD wanderlust-2.15.5_pre20071215.ebuild 1299 RMD160 d2746992aa34bdd57dcba8d004c48bc370b96bb8 SHA1 85b7b02d06b77b3fda16ddb2774bbb243f010cb7 SHA256 c07be2bf93fb770f7415eeed901102e05b7d5c922cecc56a6a6dfefe6ccd64da
-MISC ChangeLog 14221 RMD160 5e122052ad70c319c44cb65eece2780db6ca2c06 SHA1 ec0a38e5b3a92bb904f367b5feb13f86e94bdf62 SHA256 bd81409fc72ac4460cc7782fb466ac0a05dd1ca4c57bc399c2d8991b73c60b33
+EBUILD wanderlust-2.15.7_pre20090820.ebuild 1482 RMD160 4de9a42f3dfc781875558a63be8b872cf3bd1337 SHA1 3b13c879c665afed998b4c29bb9e386bd59ed020 SHA256 ad4da6c9e857751eaa01f907e61d3545a65b36a257c4be696357a148c3cd929d
+MISC ChangeLog 14498 RMD160 afbf6fe4d8ed9a11361a703467909cc2a510308b SHA1 3b200e192139c87898a6647e822e59add71d1552 SHA256 31e197e802773a8024389e02654bb87c12094973ab99deeb8444184e26abe91c
 MISC metadata.xml 266 RMD160 b7787ae5ebcbe57fb7b33da75bc77ae52c7aec16 SHA1 edaea015d5d4ace9ae690007b2a79d546d460915 SHA256 68c0b94c1833cd75c01e7d674be112b432874d7a2e4176481fab6b4db81b1426
